Closed Bug 1889907 Opened 6 months ago Closed 6 months ago

Intermittent /builds/worker/checkouts/gecko/comm/mailnews/protocols/ews/EwsIncomingServer.cpp(81,3): error: bad implicit conversion constructor for 'OAuthListener'

Categories

(Thunderbird :: Build Config, defect, P5)

Tracking

(Not tracked)

RESOLVED FIXED
126 Branch

People

(Reporter: intermittent-bug-filer, Assigned: ikey)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Keywords: regression
Regressed by: 1887991
Assignee: nobody → ikey
Status: NEW → ASSIGNED
Attachment #9395258 - Attachment description: Bug 1889907 - Use explicit constructor for OAuthListener in EWS protocol, r=babolivier → Bug 1889907 - Use explicit constructor for OAuthListener in EWS protocol. r=babolivier

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/19d055dc0fa2
Use explicit constructor for OAuthListener in EWS protocol. r=babolivier

Status: ASSIGNED → RESOLVED
Closed: 6 months ago
Resolution: --- → FIXED
Target Milestone: --- → 126 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: