Bug 1889907 - Use explicit constructor for OAuthListener in EWS protocol. r=babolivier

Differential Revision: https://phabricator.services.mozilla.com/D206768

--HG--
extra : rebase_source : acd09a23cbc2309a9e45b2cfb32d06b6f176f295